# manager_activities_public

./: .gitignore  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/reglament/manager_activites/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  constants.dart  main.dart
lib/admin/activities/: admin_activities.dart
lib/admin/activities/components/: dialog_add.dart
lib/admin/statuses/: statuses.dart
lib/contacts/: contacts.dart
lib/contacts/views/: contacts_view.dart  detailed_contact.dart  make_new.dart
lib/create_event/: create_event.dart
lib/create_event/data/: users.dart
lib/create_event/views/: create_view.dart
lib/create_event/views/components/: text_field.dart
lib/home/data/: event_loader.dart
lib/home/view/: all_activities_view.dart  home_view.dart
lib/home/view/components/: calendar.dart
lib/l10n/: app_en.arb  app_ru.arb  app_uk.arb
lib/login/: login.dart
lib/login/data/: login.dart
lib/login/views/: form.dart  login_view.dart
lib/providers/: auth_provider.dart
lib/repository/: prefs_users.dart  repository.dart  settings.dart
lib/self_updater/: self_updater.dart
lib/settings/views/: settings_view.dart
lib/utils/: shake_detector.dart
linux/: CMakeLists.txt  my_application.cc
reporter/: Cargo.toml
reporter/src/: main.rs
web/: index.html  manifest.json
